--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@ html {
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 2%;
-  background-color: #f8f8f8;
+  background: #f8f8f8 url("./assets/background.png") no-repeat center;
+  background-size: cover;
 }
 
 nav {
@@ -52,7 +54,7 @@ nav {
   padding: 2.5% 2.5% 0.5% 2.5%;
   border: 2px solid #bcbcbc;
   border-radius: 6px;
-  color: #6593a6;
+  color: #4a4a4a;
   font-size: 1.1em;
   letter-spacing: 0.8px;
 }
@@ -63,9 +65,22 @@ nav {
   outline: none;
 }
 
+.filter-container {
+  display: flex;
+  flex-direction: row;
+  margin: 3% 2%;
+}
+
+.filter-container p {
+  margin: 0 0 0 5%;
+}
+
 select {
   width: 100px;
-  margin: 2% 1%;
+  padding-bottom: 1%;
+  border: none;
+  border-bottom: 1px solid #4a4a4a;
+  background-color: transparent;
 }
 
 #priorityIcon {
@@ -163,21 +178,21 @@ select {
 }
 
 #trashIcon {
-  width: 24px;
+  width: 20px;
   color: #b73d3d;
 }
 
 /* Hide checkboxes. Remove margins for positioning. */
 #completeCheckbox {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   margin: 0;
   opacity: 0;
 }
 
 #deleteCheckbox {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   margin: 0;
   position: absolute;
   opacity: 0;
@@ -207,8 +222,8 @@ select {
 }
 
 .task-checkbox {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   border: 2px solid #ffa91a;
   border-radius: 2px;
 }
@@ -216,8 +231,8 @@ select {
 .checked-task {
   position: relative;
   z-index: 0;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 2px;
   overflow: hidden;
 }
